[project]
name = "repl-nix-pricepulse"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "folium>=0.19.2",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "requests>=2.32.3",
    "streamlit-folium>=0.24.0",
    "streamlit>=1.41.1",
    "trafilatura>=2.0.0",
    "twilio>=9.4.1",
    "websocket-client>=1.8.0",
    "python-socketio>=5.12.0",
    "bcrypt>=4.2.1",
    "socketio>=0.2.1",
    "reportlab>=4.2.5",
    "fpdf>=1.7.2",
    "openai>=1.58.1",
    "python-dotenv>=1.0.1",
    "secure-smtplib>=0.1.1",
    "streamlit-js-eval>=0.1.7",
]
